; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/cxl/extr_cxllib.c_cxllib_switch_phb_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/cxl/extr_cxllib.c_cxllib_switch_phb_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }

@CPU_FTR_HVMODE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@OPAL_PHB_CAPI_MODE_SNOOP_OFF = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@EPERM = common dso_local global i32 0, align 4
@CXL_MODE_DMA_TVT1 = common dso_local global i64 0, align 8
@OPAL_PHB_CAPI_MODE_DMA_TVT1 = common dso_local global i32 0, align 4
@OPAL_PHB_CAPI_MODE_SNOOP_ON = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cxllib_switch_phb_mode(%struct.pci_dev* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pci_dev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.pci_dev* %0, %struct.pci_dev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i32 0, i32* %8, align 4
  %9 = load i32, i32* @CPU_FTR_HVMODE, align 4
  %10 = call i32 @cpu_has_feature(i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %4, align 4
  br label %54

15:                                               ; preds = %3
  %16 = load i32, i32* %6, align 4
  switch i32 %16, label %49 [
    i32 128, label %17
    i32 129, label %30
  ]

17:                                               ; preds = %15
  %18 = load %struct.pci_dev*, %struct.pci_dev** %5, align 8
  %19 = load i32, i32* @OPAL_PHB_CAPI_MODE_SNOOP_OFF, align 4
  %20 = call i32 @pnv_phb_to_cxl_mode(%struct.pci_dev* %18, i32 %19)
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %17
  %24 = load i32, i32* @EBUSY, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %8, align 4
  br label %29

26:                                               ; preds = %17
  %27 = load i32, i32* @EPERM, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %8, align 4
  br label %29

29:                                               ; preds = %26, %23
  br label %52

30:                                               ; preds = %15
  %31 = load i64, i64* %7, align 8
  %32 = load i64, i64* @CXL_MODE_DMA_TVT1, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %37

34:                                               ; preds = %30
  %35 = load i32, i32* @EINVAL, align 4
  %36 = sub nsw i32 0, %35
  store i32 %36, i32* %4, align 4
  br label %54

37:                                               ; preds = %30
  %38 = load %struct.pci_dev*, %struct.pci_dev** %5, align 8
  %39 = load i32, i32* @OPAL_PHB_CAPI_MODE_DMA_TVT1, align 4
  %40 = call i32 @pnv_phb_to_cxl_mode(%struct.pci_dev* %38, i32 %39)
  store i32 %40, i32* %8, align 4
  %41 = load i32, i32* %8, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %37
  %44 = load i32, i32* %8, align 4
  store i32 %44, i32* %4, align 4
  br label %54

45:                                               ; preds = %37
  %46 = load %struct.pci_dev*, %struct.pci_dev** %5, align 8
  %47 = load i32, i32* @OPAL_PHB_CAPI_MODE_SNOOP_ON, align 4
  %48 = call i32 @pnv_phb_to_cxl_mode(%struct.pci_dev* %46, i32 %47)
  store i32 %48, i32* %8, align 4
  br label %52

49:                                               ; preds = %15
  %50 = load i32, i32* @EINVAL, align 4
  %51 = sub nsw i32 0, %50
  store i32 %51, i32* %8, align 4
  br label %52

52:                                               ; preds = %49, %45, %29
  %53 = load i32, i32* %8, align 4
  store i32 %53, i32* %4, align 4
  br label %54

54:                                               ; preds = %52, %43, %34, %12
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local i32 @cpu_has_feature(i32) #1

declare dso_local i32 @pnv_phb_to_cxl_mode(%struct.pci_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
